# racoonsmeal

./: .gitignore
nutrition-modling/: README.md
racoonsmeal-backend/: docker-compose.yml  dockerfile  entrypoint.sh  pyproject.toml
racoonsmeal-backend/prod/: prod.yml
racoonsmeal-backend/src/: db.sqlite3
racoonsmeal-backend/src/apps/planner/: admin.py  models.py
racoonsmeal-backend/src/apps/planner/migrations/: 0001_initial.py  0002_initial.py  0002_usernutrientrequirement.py
racoonsmeal-backend/src/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
racoonsmeal-backend/src/apps/users/migrations/: 0001_initial.py  0002_userprofile.py
racoonsmeal-backend/src/config/: settings.py  urls.py
